fixing overflow blog header

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -91,8 +91,7 @@ article#about a {
 header.blog {
     transition: all .2s ease-in-out;
     margin-top: 1em;
-    width: 110%!important;
-    margin-left: -5%;
+    width:100%;
     margin-top: -10px;
     margin-bottom: 1.5em;
     padding-top: 2em;
